smm-1.8.0/multiCloudDeployments/control/BoutiqueApp/istio-manifests/frontEnd-mesh-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  labels:
    app: boutique-frontEnd-ingressgateway
  name: boutique-frontEnd-ingressgateway
  namespace: boutique-app
spec:
  selector:
    gateway-name: boutique-frontend-mesh-gw
    gateway-type: ingress
  servers:
  - hosts:
    - "*"
    port:
      name: http
      number: 80
      protocol: HTTP
