smm-1.8.0/multiCloudDeployments/control/BoutiqueApp/istio-manifests/frontEnd-ingress.yaml
# Copyright (c) 2021, Cisco Systems, Inc. and/or its affiliates. All rights reserved. 
# Licensed under the Apache 2.0 license, see LICENSE file.

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress
spec:
  hosts:
  - "*"
  gateways:
  - boutique-frontEnd-ingressgateway
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - "frontend.default.svc.cluster.local"
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
